@@ -2,7 +2,7 @@ sg3-utils (1.37-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 27 Sep 2013 14:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 08 Oct 2013 10:00:00 -0400
 
 sg3-utils (1.36-0.1) unstable; urgency=low
 
