@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.37 [20130927] [svn: r519]
+Changelog for sg3_utils-1.37 [20131007] [svn: r520]
   - sg_compare_and_write: fix wrprotect setting
     - add --quiet option to suppress miscompare report
     - merge features from another implementation
@@ -21,6 +21,7 @@ Changelog for sg3_utils-1.37 [20130927] [svn: r519]
     - add --quiet option
   - sg_xcopy: allow sg and bsg devices
     - fix for bpt going negative
+    - limit each XCOPY(LID1) command to 65535 blocks
     - fix for seek in multi-segment copies
   - sg_sanitize: skip 15 second safety delay with --fail
   - sg_libs: extended copy opcode renamed (spc4r34)
@@ -31,7 +32,7 @@ Changelog for sg3_utils-1.37 [20130927] [svn: r519]
     - add dStrHexStr(): ascii hex to string
     - add SG_LIB_CAT_MISCOMPARE to categories
     - clean header files
-  - sg_pt_freebsd: sanity check on sense_resid
+  - sg_pt_freebsd: sanity check on sense_resid; fix leaks
   - scripts/rescan-scsi-bus.sh KG's v1.57 + HR patch
     - improve wlun handling, detect updated and resized
       devices, better multipath support
